# how-query-engines-work-rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  MIGRATION_INSTRUCTIONS.md  README.md  TRANSLATION_NOTES.md
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/src/: lib.rs
client/: Cargo.toml
client/src/: client.rs  context.rs  endpoint.rs  flight_executor_client.rs  lib.rs
client/tests/: distributed_integration_test.rs
datasource/: Cargo.toml
datasource/src/: csv_data_source.rs  data_source.rs  in_memory_data_source.rs  lib.rs  parquet_data_source.rs
datatypes/: Cargo.toml
datatypes/src/: arrow_field_vector.rs  arrow_types.rs  arrow_vector_builder.rs  column_vector.rs  lib.rs  literal_value_vector.rs  record_batch.rs  scalar_value.rs  schema.rs  shuffle_id.rs  shuffle_location.rs
distributed/: Cargo.toml
distributed/src/: distributed_config.rs  distributed_context.rs  distributed_planner.rs  lib.rs  query_stage.rs  scheduler.rs
examples/: Cargo.toml
examples/src/: lib.rs
execution/: Cargo.toml
execution/src/: execution_context.rs  lib.rs  parallel_context.rs
flight-server/: Cargo.toml
flight-server/src/: flight_server.rs  lib.rs  r_query_flight_producer.rs
flight-server/tests/: integration_test.rs
fuzzer/: Cargo.toml
fuzzer/src/: fuzzer.rs  lib.rs
logical-plan/: Cargo.toml
logical-plan/src/: aggregate.rs  data_frame.rs  expressions.rs  join.rs  lib.rs  limit.rs  logical_expr.rs  logical_plan.rs  projection.rs  scan.rs  selection.rs
optimizer/: Cargo.toml
optimizer/src/: lib.rs  optimizer.rs  projection_push_down_rule.rs
physical-plan/: Cargo.toml
physical-plan/src/: action.rs  aggregate_expression.rs  aggregate_mode.rs  avg_expression.rs  binary_expression.rs  boolean_expression.rs  cast_expression.rs  column_expression.rs  count_expression.rs  date_expression.rs  executor_context.rs  expressions.rs  hash_aggregate_exec.rs  hash_join_exec.rs  lib.rs  limit_exec.rs  math_expression.rs  max_expression.rs  min_expression.rs  physical_plan.rs  projection_exec.rs  row_key.rs  scan_exec.rs  selection_exec.rs  shuffle_location.rs  shuffle_manager.rs  shuffle_reader_exec.rs  shuffle_writer_exec.rs  sum_expression.rs  task.rs  unary_math_expression.rs
proto/: README.md  rquery.proto
protobuf/: Cargo.toml  build.rs
protobuf/src/: lib.rs  physical_plan_deserializer.rs  physical_plan_serializer.rs  protobuf_deserializer.rs  protobuf_serializer.rs
query-planner/: Cargo.toml
query-planner/src/: lib.rs  query_planner.rs
sql/: Cargo.toml
sql/src/: expressions.rs  lib.rs  pratt_parser.rs  sql_parser.rs  sql_planner.rs  sql_tokenizer.rs  token_stream.rs  tokens.rs
testdata/: README.md
