# rquery ÔÇö workspace manifest
#
# Faithful Rust port of `kquery`, the Kotlin query engine from Andy Grove's
# "How Query Engines Work" (2nd edition). See README.md for the full context.
#
# Workspace decisions are documented in `ARCHITECTURE.md` ┬º1 and ┬º8 (definition of done).

[workspace]
resolver = "2"
# 15 crates, mirroring the upstream kquery Gradle modules 1:1.
# Build order (per ARCHITECTURE.md ┬º4.5) matches the listing order below.
members = [
    "datatypes",
    "datasource",
    "logical-plan",
    "sql",
    "optimizer",
    "physical-plan",
    "query-planner",
    "execution",
    "fuzzer",
    "examples",
    "benchmarks",
    "protobuf",
    "flight-server",
    "client",
    "distributed",
]

[workspace.package]
edition       = "2024"
license       = "Apache-2.0"
version       = "0.1.0"
repository    = "https://github.com/bkunyiha/how-query-engines-work-rust"   # update before `git remote add`
authors       = ["Bill Kunyiha <bkunyiha@gmail.com>"]
rust-version  = "1.85"

[workspace.dependencies]
# arrow-rs and parquet ÔÇö pin the major; let cargo update the minor.
arrow         = "55"
arrow-array   = "55"
arrow-schema  = "55"
arrow-flight  = "55"
# Arrow IPC reader/writer ÔÇö used by `physical-plan::ShuffleManager` to
# serialise per-partition shuffle output to local files. Same kquery shape
# as the Kotlin `ArrowFileWriter`/`ArrowFileReader` calls.
arrow-ipc     = "55"
parquet       = "55"

# Data-parallelism ÔÇö the faithful Rust substitution for Kotlin coroutines in
# `ParallelContext` (ARCHITECTURE.md ┬º3.9 / ┬º4.8). CPU-bound work on a work-stealing
# thread pool, NOT tokio (tokio is for I/O-bound concurrency).
rayon         = "1"

# Random number generation ÔÇö needed by the `fuzzer` crate as the analogue of
# Kotlin's `kotlin.random.Random`. `StdRng::seed_from_u64(0)` matches the Kotlin
# `Random(0)` seeding pattern. The RNG sequence will NOT byte-match Kotlin's
# (different algorithms); the fuzzer is used for differential testing inside Rust.
rand          = "0.8"

# Date / time ÔÇö the Rust analogue of Kotlin's `java.time.*`. We use
# `chrono::NaiveDate` wherever the Kotlin source uses `java.time.LocalDate`
# (logical-plan `LiteralDate`, sql planner date-literal parse, query-planner
# date-to-days lowering). Pulled in by the same crates that import it in
# Kotlin ÔÇö `logical-plan`, `sql`, `query-planner`. Standing convention: when
# Kotlin uses a stdlib library, the Rust port uses the equivalent crate.
chrono        = { version = "0.4", default-features = false, features = ["std"] }

# Process / system info ÔÇö the Rust analogue of Kotlin's
# `Runtime.getRuntime().{max,total,free}Memory()`. Used by the `benchmarks`
# crate to print process memory stats at the start and end of a run, matching
# Kotlin's `Benchmarks.kt` shape. Per the standing convention above.
sysinfo       = { version = "0.31", default-features = false, features = ["system"] }

# RPC and serialisation ÔÇö needed only by protobuf / flight-server / client / distributed.
prost         = "0.13"
tonic         = "0.12"

# SQL parser ÔÇö DO NOT enable yet. Per ARCHITECTURE.md ┬º4.6, the Pratt parser is
# hand-ported in the `sql` crate; a `sqlparser-rs` swap is reserved for a future rewrite.
# sqlparser   = "0.50"

# Error handling ÔÇö minimal in this faithful port per ARCHITECTURE.md ┬º3.6 (panic!()/unwrap() are acceptable).
anyhow        = "1"
thiserror     = "1"

# Logging
log           = "0.4"
env_logger    = "0.11"
# `tracing` is DataFusion's logging choice. Used by `distributed/` (the analogue of
# Kotlin's `java.util.logging.Logger` in `Scheduler.kt`) so rquery readers see the
# same macro names (`info!`/`debug!`/`warn!`) they will meet at DataFusion source level.
tracing       = "0.1"
# `tracing-subscriber` is the consumer side ÔÇö only needed by binaries that initialise
# the global subscriber. Added at workspace level so `flight-server`'s bin and any
# future bins can pick it up consistently.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime ÔÇö required by `flight-server` (the Arrow Flight server runs on tonic,
# which is async-native). Kept minimal in features: rt-multi-thread for the worker
# pool, macros for `#[tokio::main]`, sync for `mpsc` channels used in the
# sync->async bridge inside `do_get` (see ARCHITECTURE.md ┬º4.6).
#
# NOTE: This does NOT contradict the rayon-not-tokio rule at line 52. Rayon is for
# CPU-bound operator execution inside `ParallelContext`; tokio is for I/O-bound gRPC
# handling at the Flight boundary. The two coexist: operator threads use rayon,
# Flight server I/O uses tokio. See ARCHITECTURE.md ┬º3.9 for the split rationale.
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }

# `futures` provides the `Stream` trait that arrow-flight's `FlightService` associated
# types require. `tokio-stream` (added when we need `ReceiverStream` in batch E) sits
# on top of `futures-core`; pulling `futures` keeps both surfaces available.
futures       = "0.3"

# UUID generation ÔÇö analogue of Kotlin's `java.util.UUID.randomUUID()`. Used by
# `distributed::Scheduler` to mint a fresh `jobUuid` per query.
uuid          = { version = "1", features = ["v4"] }

# Testing helpers
pretty_assertions = "1"
