# rquery — workspace manifest
#
# Faithful Rust port of `kquery`, the Kotlin query engine from Andy Grove's
# "How Query Engines Work" (2nd edition). See README.md for the full context.
[workspace]
resolver = "2"
# 15 crates. Build order matches the listing order below.
members = [
    "datatypes",
    "datasource",
    "logical-plan",
    "sql",
    "optimizer",
    "physical-plan",
    "query-planner",
    "execution",
    "fuzzer",
    "examples",
    "benchmarks",
    "protobuf",
    "flight-server",
    "client",
    "distributed",
]

[workspace.package]
edition       = "2024"
license       = "Apache-2.0"
version       = "0.1.0"
repository    = "https://github.com/bkunyiha/how-query-engines-work-rust"
authors       = ["Bill Kunyiha <bkunyiha@gmail.com>"]
rust-version  = "1.85"

[workspace.dependencies]
# arrow-rs and parquet — pin the major; let cargo update the minor.
arrow         = "59"
arrow-array   = "59"
arrow-schema  = "59"
arrow-flight  = "59"
# Arrow IPC reader/writer — used by `physical-plan::ShuffleManager` to
# serialise per-partition shuffle output to local files.
arrow-ipc     = "59"
parquet       = "59"

# Data-parallelism — used by `ParallelContext` for CPU-bound work on a
# work-stealing thread pool. NOT tokio (tokio is for I/O-bound concurrency).
rayon         = "1"

# Random number generation — used by the `fuzzer` crate for differential
# testing. `StdRng::seed_from_u64(0)` provides deterministic seeding.
rand          = "0.10"

# Date / time — `chrono::NaiveDate` is used for `LiteralDate` in
# `logical-plan`, the SQL planner's date-literal parse, and the
# `query-planner` date-to-days lowering.
chrono        = { version = "0.4", default-features = false, features = ["std"] }

# Process / system info — used by the `benchmarks` crate to print process
# memory stats at the start and end of a run.
sysinfo       = { version = "0.36", default-features = false, features = ["system"] }

# RPC and serialisation — needed only by protobuf / flight-server / client / distributed.
prost         = "0.14"
tonic         = "0.14"

# SQL parser — DO NOT enable. The Pratt parser is hand-rolled in the `sql`
# crate; replacing it with `sqlparser-rs` is out of scope here.
# sqlparser   = "0.50"

# Error handling.
anyhow        = "1"
thiserror     = "2"

# Logging
log           = "0.4"
env_logger    = "0.11"
# `tracing` is DataFusion's logging choice. Used by `distributed/` so readers
# see the same macro names (`info!`/`debug!`/`warn!`) used by DataFusion.
tracing       = "0.1"
# `tracing-subscriber` is the consumer side — only needed by binaries that initialise
# the global subscriber. Added at workspace level so `flight-server`'s bin and any
# future bins can pick it up consistently.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime — required by `flight-server` (the Arrow Flight server runs on tonic,
# which is async-native). Kept minimal in features: rt-multi-thread for the worker
# pool, macros for `#[tokio::main]`, sync for `mpsc` channels used in the
# sync->async bridge inside `do_get`.
#
# NOTE: This does NOT contradict the rayon-not-tokio rule above. Rayon is for
# CPU-bound operator execution inside `ParallelContext`; tokio is for
# I/O-bound gRPC handling at the Flight boundary. The two coexist: operator
# threads use rayon, Flight server I/O uses tokio.
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }

# `futures` provides the `Stream` trait that arrow-flight's `FlightService` associated
# types require. `tokio-stream` (added when we need `ReceiverStream` in batch E) sits
# on top of `futures-core`; pulling `futures` keeps both surfaces available.
futures       = "0.3"

# UUID generation — used by `distributed::Scheduler` to mint a fresh
# `job_uuid` per query.
uuid          = { version = "1", features = ["v4"] }

# Testing helpers
pretty_assertions = "1"
