[package]
name         = "benchmarks"
description  = "TPC-H runner and NYC taxi benchmark."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
execution    = { path = "../execution" }
datasource   = { path = "../datasource" }    # ParquetDataSource (tpch_runner), InMemoryDataSource (benchmarks)
datatypes    = { path = "../datatypes" }     # RecordBatch, SchemaConverter, to_csv
# Data parallelism: `benchmarks` fans out one query per input CSV via
# `into_par_iter().flat_map(...)`.
rayon        = { workspace = true }
# Process-memory stats — used to report RSS / virtual / available memory at
# the start and end of a benchmark run.
sysinfo      = { workspace = true }
anyhow       = { workspace = true }
log          = { workspace = true }
env_logger   = { workspace = true }

[[bin]]
name = "tpch_runner"
path = "src/bin/tpch_runner.rs"

[[bin]]
name = "benchmarks"
path = "src/bin/benchmarks.rs"
