[package]
name         = "client"
description  = "Flight client wrapper and FlightExecutorClient for the distributed scheduler."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
# External — the Arrow Flight client + the async stack underneath it.
# Communication with the Flight server is over the wire (not via the
# in-workspace `flight-server` crate).
arrow            = { workspace = true }
arrow-flight     = { workspace = true }
tonic            = { workspace = true }
tokio            = { workspace = true }
# `futures` for the `Stream` trait (decoding `FlightData` from the server's
# `do_get` response). `tokio-stream` for stream adapters used when consuming
# the `Streaming<FlightData>` returned by tonic.
futures          = { workspace = true }
tokio-stream     = "0.1"
# `prost` for direct `Message::encode_to_vec` / `decode` on `pb::Action`,
# `pb::TaskInfo`, `pb::TaskResult` — same direct usage as `flight-server`.
prost            = { workspace = true }
# `tracing` for log macros (matches `flight-server` and `distributed`).
tracing          = { workspace = true }

# Internal — six siblings.
# - datatypes / datasource / logical-plan / protobuf: the wire-level
#   protobuf contract is the entire interface to `flight-server` (no direct
#   dep on it from this crate).
# - distributed: provides the `ExecutorClient` trait that
#   `FlightExecutorClient` implements; this is the concrete client that
#   drives the scheduler over real gRPC.
# - sql: used by `Context::sql` to parse the user's SQL string into a
#   `LogicalPlan`.
# - physical-plan: provides `Task` and `ShuffleLocation` — the types
#   `FlightExecutorClient` ships across the wire.
datatypes     = { path = "../datatypes" }
datasource    = { path = "../datasource" }
logical-plan  = { path = "../logical-plan" }
protobuf      = { path = "../protobuf" }
physical-plan = { path = "../physical-plan" }
distributed   = { path = "../distributed" }
sql           = { path = "../sql" }

anyhow       = { workspace = true }

[dev-dependencies]
# The integration test in `tests/` spins up a real `flight-server` on a
# random port and drives a distributed query through it. The dep is
# dev-only — at runtime the client crate has no knowledge of
# `flight-server`; the protocol contract is the protobuf bytes.
flight-server = { path = "../flight-server" }
