[package]
name         = "datasource"
description  = "DataSource trait with CSV, Parquet, and in-memory implementations."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
arrow        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
parquet      = { workspace = true }
datatypes    = { path = "../datatypes" }
