[package]
name         = "distributed"
description  = "Distributed query execution: scheduler, query stages, distributed planner."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
# External
# `tracing` matches DataFusion's logging idiom.
# `uuid` mints fresh `job_uuid` strings via `Uuid::new_v4()`.
# No `arrow-flight` or `protobuf` dep — the Flight transport lives behind the
# `ExecutorClient` trait (in `scheduler.rs`), whose implementation lives in
# `flight-server` / `client`.
tracing        = { workspace = true }
uuid           = { workspace = true }

# Internal siblings:
#   - datasource (CsvDataSource in DistributedContext)
#   - datatypes (RecordBatch return type)
#   - logical-plan (LogicalPlan/Scan, DataFrame for the context facade)
#   - physical-plan (PhysicalPlan / ShuffleLocation / Task / ShuffleWriterExec /
#     ShuffleReaderExec / HashAggregateExec / AggregateMode — used by DistributedPlanner)
#   - optimizer (Optimizer in DistributedContext.execute)
#   - query-planner (QueryPlanner in DistributedContext.execute)
#   - sql (SqlParser / SqlPlanner / SqlSelect / SqlTokenizer in DistributedContext.sql)
# `execution` is intentionally NOT a dependency — `DistributedContext`
# re-implements the registry / SQL parse pipeline rather than reusing
# `ExecutionContext`.
datasource     = { path = "../datasource" }
datatypes      = { path = "../datatypes" }
logical-plan   = { path = "../logical-plan" }
physical-plan  = { path = "../physical-plan" }
optimizer      = { path = "../optimizer" }
query-planner  = { path = "../query-planner" }
sql            = { path = "../sql" }
