[package]
name         = "examples"
description  = "Worked examples — NYCTaxi, ParallelQuery, etc. Rust port of kquery/examples."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
execution       = { path = "../execution" }
datasource      = { path = "../datasource" }    # InMemoryDataSource for parallel_query
datatypes       = { path = "../datatypes" }     # RecordBatch, ScalarValue, arrow_types
logical-plan    = { path = "../logical-plan" }  # col, cast, max, format, …
optimizer       = { path = "../optimizer" }     # Optimizer used by nyc_taxi
# `distributed_example` and `distributed_flight_example` use the distributed
# stack. The former impls `ExecutorClient` directly; the latter uses
# `FlightExecutorClient` from the `client` crate against an in-process
# `flight-server`.
distributed     = { path = "../distributed" }
physical-plan   = { path = "../physical-plan" }
client          = { path = "../client" }
flight-server   = { path = "../flight-server" }
# Used by `distributed_flight_example` to spawn the in-process tonic server
# and bind a random TCP port — same pattern as
# `client/tests/distributed_integration_test.rs`.
arrow-flight    = { workspace = true }
tonic           = { workspace = true }
tokio           = { workspace = true }
tokio-stream    = "0.1"
# Coroutines → rayon (ARCHITECTURE.md §3.9): `parallel_query` fans out 12
# monthly CSV queries via `(1..=12).into_par_iter()`, the faithful Rust
# substitution for kquery's `GlobalScope.async { … }.await`.
rayon           = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
anyhow          = { workspace = true }

[[bin]]
name = "nyc_taxi"
path = "src/bin/nyc_taxi.rs"

[[bin]]
name = "parallel_query"
path = "src/bin/parallel_query.rs"

[[bin]]
name = "parallel_execution_example"
path = "src/bin/parallel_execution_example.rs"

[[bin]]
name = "distributed_example"
path = "src/bin/distributed_example.rs"

[[bin]]
name = "distributed_flight_example"
path = "src/bin/distributed_flight_example.rs"
