[package]
name         = "execution"
description  = "ExecutionContext + ParallelContext. The runtime entry point. Rust port of kquery/execution."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
arrow                 = { workspace = true }
rayon                 = { workspace = true }
datatypes      = { path = "../datatypes" }
logical-plan   = { path = "../logical-plan" }
sql            = { path = "../sql" }
physical-plan  = { path = "../physical-plan" }
query-planner  = { path = "../query-planner" }
optimizer      = { path = "../optimizer" }
datasource     = { path = "../datasource" }

[dev-dependencies]
# The Fuzzer-backed ExecutionTest cases (`min max sum float`, `float math`,
# `boolean expressions`, `inner join`, `left join`) construct deterministic
# in-memory batches via `Fuzzer::create_record_batch(schema, columns)`.
fuzzer         = { path = "../fuzzer" }
