[package]
name         = "fuzzer"
description  = "Random query generator for differential testing."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
datatypes    = { path = "../datatypes" }
logical-plan = { path = "../logical-plan" }
sql          = { path = "../sql" }
rand         = { workspace = true }
arrow-schema = { workspace = true }   # for `DataType` in `create_values` dispatch

[dev-dependencies]
# Smoke test reads testdata/employee.csv through a `CsvDataSource` to drive
# `create_plan()`; the data-source crate is only needed at test time.
datasource   = { path = "../datasource" }
