[package]
name         = "logical-plan"
description  = "LogicalPlan, LogicalExpr, DataFrame. Rust port of kquery/logical-plan."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
arrow-schema = { workspace = true }
chrono       = { workspace = true }      # NaiveDate for `LiteralDate` (Kotlin `java.time.LocalDate`)
datatypes    = { path = "../datatypes" }
datasource   = { path = "../datasource" }
