[package]
name         = "logical-plan"
description  = "LogicalPlan, LogicalExpr, DataFrame."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
arrow-schema = { workspace = true }
chrono       = { workspace = true }      # NaiveDate for `LiteralDate`
datatypes    = { path = "../datatypes" }
datasource   = { path = "../datasource" }
