[package]
name         = "optimizer"
description  = "Logical optimisation rules: ProjectionPushDown, etc."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
logical-plan = { path = "../logical-plan" }

[dev-dependencies]
# Used only by the optimizer test, which scans a CsvDataSource.
datasource = { path = "../datasource" }
